# HPO

./: .dockerignore  .gitignore  ARCHITECTURE.md  Dockerfile  README.md  app_streamlit.py  ard_engine.py  environment.yml  pyproject.toml  pytest.ini  requirements-lock.txt  requirements.txt  run_cli.py
.github/workflows/: ci.yml  hpo-cloud-run.yml
ard/: __init__.py  advanced_visuals.py  artifacts.py  cli.py  constants.py  engine_core.py  errors.py  figures.py  metrics.py  optimizers.py  paper_artifacts.py  preprocess.py  shap_utils.py  streamlit_helpers.py  wilcoxon.py  xai_artifacts.py
scripts/: verify_python_env.py
tests/: test_engine.py
