[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "advanced-research-dashboard-hpo"
version = "1.9.0"
description = "Paper-ready HPO, nested CV, SHAP, and reporting dashboard for forecasting experiments."
readme = "README.md"
requires-python = ">=3.10,<3.13"
license = {text = "Research/academic use"}
authors = [{name = "Advanced Research Dashboard Contributors"}]
dependencies = [
    "streamlit>=1.33,<2",
    "pandas>=2.0,<2.3",
    "numpy>=1.24,<2.0",
    "scipy>=1.10,<1.14",
    "scikit-learn>=1.2,<1.6",
    "matplotlib>=3.7,<3.10",
    "plotly>=5.20,<6",
    "openpyxl>=3.1,<4",
    "lightgbm>=4.0,<5",
    "xgboost>=2.0,<3",
    "shap>=0.44,<0.47",
    "optuna>=3.5,<5",
    "lime>=0.2.0.1,<0.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8,<9",
    "ruff>=0.4,<1",
    "mypy>=1.8,<2",
]

[project.scripts]
ard-run = "ard.cli:main"

[tool.setuptools.packages.find]
include = ["ard*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
warn_unused_ignores = true
no_implicit_optional = true
